Fix overflow-x

--- a/renderer/components/infinite.css
+++ b/renderer/components/infinite.css
@@ -1,4 +1,5 @@
 .base {
 	overflow-y: auto;
+	overflow-x: hidden;
 	height: 100%;
 }
