--- a/renderer/components/list.css
+++ b/renderer/components/list.css
@@ -21,6 +21,7 @@
 
 .content {
 	overflow-y: auto;
+	overflow-x: hidden;
 	height: calc(100% - 50px);
 }
 
